<resources>
    <string name="app_name">BVRApp</string>
    <string name="bestViewReviewsHeading">Best Views \nReviews</string>
    <string name="bvr_commission_text">BestViewsReviews earns a commission from qualifying purchases.</string>
    <string name="countertop_microwave">Countertop \n Microwave</string>
    <string name="logo_of_bvr">Logo of BVR</string>
    <string name="patio_furniture_sets">Patio Furniture Sets</string>
    <string name="reviews">\ reviews</string>
    <string name="bestviewreviews_all_right_reserved">BestViewsReviews. All rights reserved</string>
    <string name="footer_disclamer_text">*Disclaimer: BestViewsReviews earns a commission from qualifying purchases.</string>
    <string name="best_laptops_of_2022">Best Laptops of 2022</string>
    <string name="udate_date">Updated on Feb 17, 2022</string>
    <string name="subtitle_divider">|</string>
    <string name="reviews_subtitle">Based on 9,000 reviews</string>
    <string name="rank">Rank</string>
    <string name="rank_value">1</string>
    <string name="product_description">MSI GL65 Leopard 10SFK-062 Gaming Laptop</string>
    <string name="check_price_at">Check price at</string>
    <string name="amazon">Amazon</string>
    <string name="bvr_ratings">BVR Rating</string>
    <string name="no_of_reviews_on_category_page">Based on 678 reviews</string>
    <string name="battery">Battery</string>
    <string name="camera">Camera</string>
    <string name="control_and_functionality">Controls and Functionality</string>
    <string name="processor">Processor</string>
    <string name="pros">Pros</string>
    <string name="pros_1">Built-in 4500mAh battery offers long-lasting battery life with 18W fast charging</string>
    <string name="text_pros_2">Enabled by True-depth camera for facial recognition that offers safety and security</string>
    <string name="textview_prso_3">EIP67 water-resistant build can stay under-water for maximum depth of 1 meter up to 30 minutes</string>
    <string name="cons">Cons</string>
    <string name="text_cons_1">Not water-proof</string>
    <string name="battery_rating_value">8.6</string>
    <string name="camera_rating_value">9.6</string>
    <string name="control_and_function_rating_value">7.5</string>
    <string name="processors_rating_value">9.5</string>
</resources>