<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".CategoryPageActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:id="@+id/appBarLayoutCategoryPage"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:id="@+id/toolBarCategoryPage"
                >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >

                    <ImageView
                        android:id="@+id/upButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"

                        android:src="@drawable/up_button"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textTitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="2dp"
                        android:fontFamily="@font/dm_sans"
                        android:text="@string/best_laptops_of_2022"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@+id/upButton"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textSubTitle1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"

                        android:layout_marginBottom="8dp"
                        android:fontFamily="@font/dm_sans"
                        android:text="@string/udate_date"
                        android:textColor="@color/black"
                        android:textSize="11sp"

                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/upButton"
                        app:layout_constraintTop_toBottomOf="@+id/textTitle" />

                    <TextView
                        android:id="@+id/textSubTitle2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2dp"

                        android:layout_marginBottom="8dp"
                        android:fontFamily="@font/dm_sans"
                        android:text="@string/subtitle_divider"
                        android:textColor="@color/light_gray"
                        android:textSize="11sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/textSubTitle1"
                        app:layout_constraintTop_toBottomOf="@+id/textTitle" />

                    <TextView
                        android:id="@+id/textSubTitle3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2dp"

                        android:layout_marginBottom="8dp"
                        android:fontFamily="@font/dm_sans"
                        android:text="@string/reviews_subtitle"
                        android:textColor="@color/black"
                        android:textSize="11sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/textSubTitle2"
                        app:layout_constraintTop_toBottomOf="@+id/textTitle" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayoutCategoryPage"
            tools:listitem="@layout/list_categorypage_prodcut"
             />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>